update dto srevice logic yaml files controller validation and tests